bootstrap/vendor/github.com/google/go-jsonnet/cpp-jsonnet/test_suite/error.import_folder.jsonnet.golden_regex
(STATIC ERROR: lib:1:1: unexpected end of file.|RUNTIME ERROR: couldn't open import "lib": basic_filebuf::underflow error reading the file(: iostream error)?
	error.import_folder.jsonnet:17:1-13	)
